--- a/04-SolarRadiation.Rmd
+++ b/04-SolarRadiation.Rmd
@@ -357,3 +357,280 @@ B = b_0 + b_1 \cdot e^{-b_2 \cdot {\hat{\Delta T}}}
 with $b_0 = 0.031$, $b_1 = 0.201$ and $b_2 = 0.185$. In this last equation,  $\hat{\Delta T}$ is a 30-day moving average for the temperature range $\Delta T$. For computational reasons, we do not estimate $\hat{\Delta T}$ from the 30-day moving window average of predicted $\Delta T$ values, but from the interpolation of pre-calculated $\hat{\Delta T}$ values in weather stations. On wet days (i.e. if $P_p > 0$) the estimation of $T_{f,max}$ is multiplied by a factor of $0.75$ to account for clouds.
 
 Although the calculation of incident solar radiation can be done independently of interpolation (see function `radiation_solarRadiation()`), it is automatically done in functions `interpolationpoints()` and `interpolationgrid()`. 
+
+
+
+## Outgoing longwave radiation and net radiation
+
+Potential and actual evapotranspiration calculations require estimating the energy actually absorved by evaporating surfaces. Daily net radiation $R_n$ (in $MJ\cdot m^{-2}\cdot day^{-1}$) is calculated using:
+\begin{equation}
+R_n = R_s\cdot (1 - \alpha) - R_{nl}
+\end{equation}
+where $R_s$ is the input solar radiation (in $MJ\cdot m^{-2}\cdot day^{-1}$), $\alpha = 0.08$ accounts for surface albedo, and $R_{nl}$ is the net longwave radiation. Outgoing longwave radiation is the radiation emitted by earth. Following McMahon et al. (2013) to obtain $R_{nl}$ one first calculates clear sky radiation $R_{so}$ using:
+\begin{equation}
+  R_{so} = (0.75 + \cdot 0.00002 \cdot z) \cdot R_{pot}
+\end{equation}
+where $z$ is elevation and $R_{pot}$ is potential radiation. $R_{nl}$ is then calculated using:
+\begin{equation}
+R_{nl} = \sigma \cdot (0.34 - 0.14 \cdot \sqrt{e}) \cdot \frac{T_{\max}^4 + T_{\min}^4}{2} \cdot (1.35 \cdot \min(\frac{R_s}{R_{so}},1.0) - 0.35)
+\end{equation}
+where $e$ is the actual vapor pressure (kPa), $T_{\max}$ and $T_{\min}$ are the maximum and minimum temperatures (in Kelvin) and $\sigma = 4.903\cdot 10^{-9} MJ \cdot K^{-4} \cdot m^{-2}$ is the Stephan-Boltzmann constant.
+
+The following figure shows an example of radiation balance for a whole year for a single site (see functions `radiation_outgoingLongwaveRadiation()` and `radiation_netRadiation()`):
+
+```{r, echo=FALSE, fig.align='center', fig.width=4, fig.height=4}
+library(meteoland)
+data(examplegridtopography)
+data(exampleinterpolationdata)
+
+#Creates spatial topography points from the grid
+p = 1:2
+points = as(examplegridtopography,"SpatialPoints")[p]
+points = spTransform(points, exampleinterpolationdata@proj4string)
+spt = SpatialPointsTopography(points, examplegridtopography$elevation[p],
+                              examplegridtopography$slope[p],
+                              examplegridtopography$aspect[p])
+
+#Interpolation of two points for the whole time period (2000)
+mp = interpolationpoints(exampleinterpolationdata, spt, verbose=FALSE)
+
+examplemeteo = mp@data[[1]]
+R_s = examplemeteo$Radiation
+tmin = examplemeteo$MinTemperature
+tmax = examplemeteo$MaxTemperature
+rhmin = examplemeteo$MinRelativeHumidity
+rhmax = examplemeteo$MaxRelativeHumidity
+dates = as.Date(row.names(examplemeteo))
+years = as.numeric(format(dates,"%Y"))
+months = as.numeric(format(dates,"%m"))
+days = as.numeric(format(dates,"%d"))
+J =rep(NA, length(years))
+for(i in 1:length(years)) {
+  J[i] = radiation_julianDay(years[i],months[i],days[i])
+  sc[i] = radiation_solarConstant(J[i])
+  delta[i] = radiation_solarDeclination(J[i])
+}
+R_nl = rep(0, length(J))
+R_net = rep(0, length(J))
+latradp = 42*(pi/180)
+elevationp = spt@data$elevation[1] 
+sloradp = spt@data$slope[1]*(pi/180)
+aspradp = spt@data$aspect[1]*(pi/180)
+for(i in 1:length(J)) {
+vpa = utils_averageDailyVP(tmin[i], tmax[i], rhmin[i], rhmax[i])
+R_nl[i] = radiation_outgoingLongwaveRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
+R_net[i] = radiation_netRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
+}
+plot(dates[1:365], R_s[1:365], type="l", xlab="", ylab = "Daily radiation (MJ m-2)", ylim=c(0,40))
+lines(dates[1:365], R_nl[1:365], col="blue")
+lines(dates[1:365], R_net[1:365], col="red")
+legend("topleft", col=c("black","blue","red"), legend = c("Solar radiation", "Outgoing longwave radiation", "Net shortwave radiation"), bty="n", cex=0.8, lty=1)
+```
+
+## Diurnal trends in diffuse and direct radiation
+
+Ecological studies sometimes require radiation information at a subdaily scale. This is particularly true for modeling studies that need to calculate canopy photosynthesis. Although meteoland has been designed to assist studies requiring meteorological data at daily scale, a function called `radiation_directDiffuseDay()` is provided to divide daily radiation into instantaneous direct and diffuse radiation. Values of instantaneous direct and diffuse radiation (shortwave and photosynthetic active radiation) are calculated following Spitters et al. (1986). First, the ratio between daily diffuse and global radiation ($R_{d}/R_{g}$) is inferred from the ratio between daily potential and global radiation ($R_{g}/R_{pot}$):
+\begin{eqnarray}
+R_{d}/R_{g} = 1 & & R_{g}/R_{pot}<0.07\\
+R_{d}/R_{g} = 1-2.3\cdot (R_{g}/R_{pot}-0.7)^2 & & 0.07\leq R_{g}/R_{pot} <0.35\\
+R_{d}/R_{g} = 1.33-1.46\cdot R_{g}/R_{pot} & & 0.35\leq R_{g}/R_{pot} <0.75\\
+R_{d}/R_{g} = 0.23 & & 0.75\leq R_{g}/R_{pot}
+\end{eqnarray}
+In a clear day (e.g. not rainy) the ratio is modified to account for the circumsolar part of diffuse radiation:
+\begin{equation}
+R'_{d}/R_{g} = \frac{R_{d}/R_{g}}{1+(1- (R_{d}/R_{g})^2)\cdot \cos^2(\pi/4-\beta)\cdot \cos^3\beta} 
+\end{equation}
+where $\beta$ is the solar elevation angle. Otherwise $R'_{d}/R_{g} = R_{d}/R_{g}$. The daily diffuse shortwave radiation ($R_{d}$) is found by multiplying global radiation by the (modified) ratio:
+\begin{equation}
+R_{d} = R_{g} \cdot (R'_{d}/R_{g}) 
+\end{equation}
+The diurnal trend of the irradiance is derived from the daily global radiation and the daily course of potential (i.e. extra-terrestrial) radiation. If we assume that the atmospheric transmission is constant during the daylight period:
+\begin{equation}
+R_{g,s}/R_{pot,s} =R_{g}/R_{pot}
+\end{equation}
+this leads to an estimation of the instantaneous global radiation (assuming compatible units):
+\begin{equation}
+R_{g,s} = R_{g}\cdot (R_{pot,s}/R_{pot})
+\end{equation}
+and the instantaneous diffuse and direct beam fluxes are estimated using:
+\begin{eqnarray}
+R_{d,s} &=& R_{d}\cdot (R_{pot,s}/R_{pot}) \\
+R_{b,s} &=& R_{g,s} - R_{d,s}
+\end{eqnarray}
+The whole procedure to calculate direct and diffuse radiation depends on the solar elevation angle, which changes through the day. Although $R'_{d}/R_{g}$ is formulated as a ratio of daily values, the ratio needs to be calculated for every instant, as $R_{pot,s}$.
+
+The procedure for photosynthetic active radiation (PAR) is similar. Daily PAR is assumed to be half of daily global radiation (i.e. $R_{PAR} = 0.5 \cdot R_{g}$. The scattered diffuse component of PAR is bigger than that of global radiation, and the ratio of diffuse over total PAR radiation is:
+\begin{equation}
+R_{PAR,d}/R_{PAR} = \left[1+0.3 \cdot (1- (R_{d}/R_{g})^2)\right]\cdot  (R'_{d}/R_{g})
+\end{equation}
+The ratio $R_{PAR,d}/R_{PAR}$ is used to determine daily diffuse PAR and the calculation of instant rates are the same as for global radiation.
+
+To illustrate the above calculations, we assume a target location in a flat terrain located at 42ºN latitude and 100 m.a.s.l, having 7.2 MJ·m$^{-2}$ of daily global radiation on the 2001/January/15 in a clear day, the hourly variation in solar elevation, potential/global radiation and diffuse/direct light for PAR and SWR would be:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+latrad = 0.73
+slorad = 0
+asprad = 0
+elevation = 100
+steps = 300
+clearday = TRUE
+J = meteoland::radiation_julianDay(2001,1,15)
+gsc = meteoland::radiation_solarConstant(J)
+delta = meteoland::radiation_solarDeclination(J)
+diffTemp = 10
+diffTempMonth = diffTemp
+vpa = meteoland::utils_averageDailyVP(5,15,70,90)
+precipitation = 0
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.2))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.1))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
+
+For a flat surface, the extraterrestrial radiation is the same that potential radiation, so that direct and diffuse light start and end at the same hours. If the same plot was on a north-facing slope of 10 degrees the daily global radiation would be 4.06 $MJ \cdot m^{-2}$ and the extraterrestrial radiation is larger than potential (i.e., accounting for topography) radiation, which has been reduced because of the orientation of the slope:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+slorad = pi*10/180
+asprad = 0
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.2))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.1))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
+
+In this situation, diffuse light should follow extraterrestrial radiation hours whereas direct light should follow potential radiation hours. Finally, if the same plot was on a north-facing slope of 30 degrees the daily global radiation would be 1.96 $MJ·m^{-2}$ and potential radiation would be 0. In this situation all radiation should correspond to diffuse radiation:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+slorad = pi*30/180
+asprad = 0
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.2))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.1))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
+
+Let us now set the date to 15th of june, the flat surface would receive 27.7 $MJ·m^{-2}$ divided into:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+slorad = 0
+asprad = 0
+J = meteoland::radiation_julianDay(2001,6,15)
+gsc = meteoland::radiation_solarConstant(J)
+delta = meteoland::radiation_solarDeclination(J)
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.6))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.3))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
+
+whereas the 10 degree north-facing slope would receive 27.3 $MJ·m^{-2}$ divided into:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+slorad = pi*10/180
+asprad = 0
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.6))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.3))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
+
+and the 30 degree slope would have 24.2 $MJ·m^{-2}$ and a repartition:
+
+```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
+par(mar=c(4,4,1,1), mfrow=c(2,2))
+slorad = pi*30/180
+asprad = 0
+ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+                                          delta, diffTemp, diffTempMonth, vpa,
+                                          precipitation)
+a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se = a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0]=NA
+plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
+plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
+lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
+lines(a$SolarHour*12/pi, a$Rg,  lty=3)
+legend("topleft", legend=c("Potential", "Extraterrestrial", "Global"), lty=c(1,2,3), bty="n")
+plot(a$SolarHour*12/pi, a$SWR_direct, type="l", ylab="SWR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.6))
+lines(a$SolarHour*12/pi, a$SWR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+plot(a$SolarHour*12/pi, a$PAR_direct, type="l", ylab="PAR radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.3))
+lines(a$SolarHour*12/pi, a$PAR_diffuse,  lty=2)
+legend("topleft", legend=c("Direct", "Diffuse"), lty=c(1,2), bty="n")
+```
